Enhance icon styling in _prose.css by adjusting height, vertical alignment, and margin for better integration in links; ensure images within icons maintain proper height and margin.

--- a/bricks/_prose.css
+++ b/bricks/_prose.css
@@ -25,9 +25,17 @@
 
     /* Helper to insert icons in links */
     i {
+      height: 1em;
+      vertical-align: -10%;
+      margin-right: 0.25em;
       font-style: normal;
       /* Workaround to prevent underline */
       display: inline-block;
+
+      img {
+        height: 100%;
+        margin: 0 !important;
+      }
     }
   }
 
